# gnome-python-desktop

./: .bzrignore  COPYING  ChangeLog  ChangeLog.pre-2.25  Makefile.am  NEWS  autogen.sh  configure.ac  generate-ChangeLog  gnome-python-desktop-2.0.pc.in  setup.py  waf  wscript
braseroburn/: Makefile.am  brasero_burn.defs  brasero_burn.override  brasero_burn_module.c  wscript
braseromedia/: bm_module.c  brasero_media.override  wscript
docs/: Makefile.am
docs/gnomeprint/: Makefile.am  wscript
docs/gnomeprintui/: Makefile.am  wscript
docs/gtksourceview/: Makefile.am  wscript
evince/: evince.defs  evince.override  evincemodule.c  wscript
evolution/: Makefile.am  __init__.py  ebook.defs  ebook.override  ebookmodule.c  ecal.defs  ecal.override  ecalmodule.c  evo-addressbook.c  evo-addressbook.h  evo-calendar.c  evo-calendar.h  evo-contact.c  evo-ebook-environment.c  evo-ebook-environment.h  evo-ecal-environment.c  evo-ecal-environment.h  override_common.c  wscript
examples/braseromedia/: drive_selection.py
examples/evolution/: evo-test.py  evolution.glade
gnomeapplet/: Makefile.am  applet.override  appletmodule.c  wscript
gnomedesktop/: Makefile.am  _gnomedesktop.defs  _gnomedesktop.override  wscript
gnomekeyring/: Makefile.am  gnomekeyring-argtypes.py  gnomekeyring.defs  gnomekeyring.override  gnomekeyringmodule.c  wscript
gnomeprint/: Makefile.am  __init__.py  print.override  printui.override  wscript
gtksourceview/: Makefile.am  gtksourceview.override  wscript
gtop/: ChangeLog  gtop.c  wscript
mediaprofiles/: Makefile.am  mediaprofiles.override  mediaprofilesmodule.c  wscript
metacity/: Makefile.am  metacity.defs  metacity.override  wscript
nautilusburn/: Makefile.am  nautilus_burn.override  wscript
rsvg/: Makefile.am  rsvg.override  wscript
tests/: common.py  runtests.py
totem/: Makefile.am  plparser.override  plparsermodule.c  wscript
wnck/: Makefile.am  wnck.defs  wnck.override  wscript
