## Process this file with automake to produce Makefile.in

REFERENCE_MAIN_FILE = gnomeprint-classes.xml
REFERENCE_DOC_NAME = pygnomeprint
DOC_MODULE = pygnomeprint

NULL=

REFERENCE_XML_FILES =                           \
  gnomeprint-gnomeprintcontext.xml              \
  gnomeprint-gnomeprintconfig.xml               \
  gnomeprint-gnomeprintjob.xml	                \
  gnomeprint-gnomeprintfont.xml	                \
  gnomeprint-gnomeprintfontface.xml	            \
  gnomeprint-gnomeprintglyphlist.xml            \
  $(NULL)

include $(top_srcdir)/docs/pygtk-ref-docs.make


EXTRA_DIST += wscript
